basic formating spaghett.html

--- a/recipes/spaghett.html
+++ b/recipes/spaghett.html
@@ -8,6 +8,25 @@
 </head>
 <body>
     <h1>Spaghetti Recipe</h1>
-    <a href="images/spaghett.jpg">Picture of spaghetti</a>
+    <img src="images/spaghett.jpg">
+
+    <h2>Description</h2>
+    <p>This easy spaghetti and meat sauce recipe takes just a few minutes of prep and then a low simmer on the stove for a deep, meaty-flavored, homemade spaghetti for the best family favorite dinner.</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Spaghetti Noodles</li>
+        <li>1lb of Ground Beef</li>
+        <li>Pasta Sauce</li>
+        <li>Water</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Boil pot of water and add spaghetti cook till tender</li>
+        <li>Brown ground beef and add pasta sauce to pan once meat is cooked</li>
+        <li>Eat</li>
+    </ol>
+
 </body>
 </html>
